# extended-path

./: README.md  pyproject.toml
extended_path/: __init__.py
tests/: test_extended_path.py
