[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.pylint]
disable = "C0301" # Line too long: Black makes this redundant

[tool.poetry]
name = "extended_path"
version = "0.0.1"
description = "A subclass of pathlib.Path that adds extra functions, conversions, and automatic validation"
authors = ["26b_dream <1@1.1>"]
reasdme = "README.md"
license = "AGPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.8"
pathvalidate = "^3.0"

[tool.poetry.group.dev]
optional = true


[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
flake8 = "*"
pytest = "*"
pylint = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
